@@ -38,11 +38,13 @@ static ScanKeyword ScanKeywords[] = {
 	{"aggregate", AGGREGATE},
 	{"all", ALL},
 	{"alter", ALTER},
+	{"analyse", ANALYSE},
 	{"analyze", ANALYZE},
 	{"and", AND},
 	{"any", ANY},
 	{"as", AS},
 	{"asc", ASC},
+	{"at", AT},
 	{"backward", BACKWARD},
 	{"before", BEFORE},
 	{"begin", BEGIN_TRANS},
@@ -60,6 +62,7 @@ static ScanKeyword ScanKeywords[] = {
 	{"character", CHARACTER},
 	{"characteristics", CHARACTERISTICS},     
 	{"check", CHECK},
+	{"checkpoint", CHECKPOINT},
 	{"close", CLOSE},
 	{"cluster", CLUSTER},
 	{"coalesce", COALESCE},
